--- a/src/example/index.css
+++ b/src/example/index.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 .app {
     width: 100%;
     display: flex;
@@ -6,20 +10,23 @@
     align-items: center;
 }
 
-.field {
-    min-height: 60px;
-    padding: 20px;
-    border: dotted 1px gray;
-    flex-direction: column;
+.form {
+    position: relative;
+    width: 100%;
+    max-width: 350px;
+    margin: 0 auto;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0,0,0,0.7);
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.errorMsg {
-    color: red
-}
-
-.warningMsg {
-    color: rgb(192, 92, 10)
+    color: white;
+    font-size: 25px;
 }
